prow/cluster/eks/gcsweb/gcsweb_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcsweb-ing
  namespace: gcs
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /robots.txt
spec:
  ingressClassName: alb
  rules:
  - host: gcsweb.istio.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gcsweb
            port:
              number: 80
